Closed Bug 523087 Opened 15 years ago Closed 15 years ago

[HTML5] Check for termination before every tree op

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hsivonen, Assigned: hsivonen)

References

Details

Attachments

(1 file, 2 obsolete files)

If something calls into nsIParser::Terminate() during a tree op flush, mParser of nsContentSink is nulled out and subsequent use thereof crashes.

Need to prepare for Terminate() getting called at various points.
Attached patch Fix and some related clean-up (obsolete) — Splinter Review
Status: NEW → ASSIGNED
Blocks: 522318
Blocks: 516186
Attachment #407024 - Attachment is obsolete: true
Attachment #407513 - Flags: review?(bnewman)
Oops. Forgot to return early if mParser has been nulled out.
Attachment #407513 - Attachment is obsolete: true
Attachment #408573 - Flags: review?(bnewman)
Attachment #407513 - Flags: review?(bnewman)
Attachment #408573 - Flags: review?(bnewman) → review+
Thank you for the review.

Landed as http://hg.mozilla.org/mozilla-central/rev/1e2197526df0
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: