Bug 523087 - Check for termination before every tree op in the HTML5 parser. r=bnewman.